# phyzzle

./: CMakeLists.txt  vcpkg.json
src/: Application.cpp  Application.h  Graphics.cpp  Graphics.h
src/Physics/: Constants.h  Forces.cpp  Forces.h  Particle.cpp  Particle.h
